FileVolume and ArtifactVolume Domain specific dynamism